# SpiritCards

./: .gitignore  README.md  build.cmd  pyproject.toml  requirements.txt  run.py
spirit_cards/: asset_map.py  constants.py  main.py
spirit_cards/card_engine/: action.py  action_handler.py  action_instance.py  board_constants.py  board_context.py  card.py  card_engine.py  card_player.py  requirement.py  requirement_handler.py  requirement_instance.py  round_context.py  round_state.py  slot.py
spirit_cards/card_library/: test_card.py  test_deck.py
spirit_cards/core/: context.py  engine.py  engine_services.py  entity.py  entity_manager.py  scene.py  scene_switcher.py
spirit_cards/core/state_machine/: state_machine.py
spirit_cards/example_code/: board_prototype_scene.py  example_scene.py  isometric_test_scene.py  secondary_scene.py
spirit_cards/main_scenes/load_scene/: asset_loader.py  load_scene.py  load_thread.py
spirit_cards/pygame_extension/: event_buffer.py  pygame_engine.py  pygame_services.py
spirit_cards/pygame_extension/gui/: button.py  button_container.py  msg_box.py  ui_component.py
spirit_cards/pygame_extension/load_scene/: asset_loader.py  load_scene.py
spirit_cards/scenes/encounter_scenes/: encounter.py  encounter_scene.py  encounter_services.py
spirit_cards/scenes/gathering_scenes/: follow_camera.py  gathering_player.py  gathering_scene.py  gathering_services.py  isometric_entity.py  isometric_tile.py  isometric_tile_map.py  map_description.py  tile_map_renderer.py
spirit_cards/services/: asset_manager.py  global_services.py
(+10 files in other folders)
